// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<header
  className="sc-htoDjs fqzctD"
>
  <div
    className="sc-dnqmqq ewvLOd"
  >
    title
  </div>
</header>
`;

exports[`Section should render content 1`] = `
<header
  className="sc-htoDjs fqzctD"
>
  <div
    className="sc-dnqmqq ewvLOd"
  >
    title
  </div>
  content
</header>
`;
